// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bot: FREE installation event insufficient permissions 1`] = `
Object {
  "body": "# Insufficient permissions

Hi there,
Thank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.

Please update your installation. 

_Missing repositories:_
 * unchanged

Best,
LabelSync Team",
  "title": "LabelSync - Insufficient permissions",
}
`;

exports[`bot: FREE installation event sync 1`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: FREE installation event sync 2`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: FREE installation invalid config issue 1`] = `
Object {
  "body": "# Welcome to LabelSync!

Hi there,
Thank you for using LabelSync. We hope you enjoyed the experience so far.
It seems like there are some problems with your configuration.
Our parser reported that:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }

Let us know if we can help you with the configuration by sending us an email to support@label-sync.com. We'll try to get back to you as quickly as possible.

Best,
LabelSync Team",
  "title": "LabelSync - Onboarding configuration",
}
`;

exports[`bot: FREE issues.labeled adds siblings 1`] = `
Array [
  "label/regular",
]
`;

exports[`bot: FREE logs are reporting correctly 1`] = `
Array [
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "FREE",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "No existing repository for maticzav, start onboarding.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Bootstraping config repo for maticzav.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding complete for maticzav.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "FREE",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "event": "installation",
    "level": "info",
    "message": "Error in config, skipping sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Opened issue undefined.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "FREE",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Performing sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "FREE",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
    "event": "installation",
    "level": "info",
    "message": "Insufficient permissions, skipping sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Opened issue undefined.",
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Configuration loaded.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Performing label sync on maticzav.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Sync completed.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Error in config Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Commented on commit 0000000000000000000000000000000000000000.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Configuration loaded.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Insufficient permissions: unchanged",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Commented on commit 0000000000000000000000000000000000000000.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "PullRequest action: opened",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Configration loaded configuration on labels",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Simulating sync.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Commented on PullRequest (undefined)",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "PullRequest action: opened",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "files": "README.md",
    "level": "info",
    "message": "Configuration didn't change, skipping comment.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "PullRequest action: opened",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Configration loaded configuration on labels",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Insufficient permissions",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Commented on PullRequest undefined",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "New label create in changed: \\":bug: Bugfix\\".",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "Removing label \\":bug: Bugfix\\" from changed.",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "Removed label \\":bug: Bugfix\\" from changed.",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 43337079,
    },
    "event": Object {
      "action": "labeled",
      "name": "issues.labeled",
    },
    "level": "info",
    "message": "Issue (1) has been labeled with \\"label/siblings\\".",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 43337079,
      "owner": "maticzav",
      "type": "Organization",
    },
  },
  Object {
    "context": Object {
      "user_id": 43337079,
    },
    "event": Object {
      "action": "labeled",
      "name": "issues.labeled",
    },
    "level": "info",
    "message": "Added siblings of label/siblings to issue 1: label/regular",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 43337079,
      "owner": "maticzav",
      "type": "Organization",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "New repository newrepo in maticzav.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "Performing sync on newrepo.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "Repository synced newrepo.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
]
`;

exports[`bot: FREE pull_request 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: FREE pull_request with insufficient permissions 1`] = `
Object {
  "body": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * unchanged",
}
`;

exports[`bot: FREE push event 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: FREE push event 2`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: FREE push event 3`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: FREE push event 4`] = `
Array [
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/1/labels",
  },
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/4/labels",
  },
]
`;

exports[`bot: FREE push event invalid configuration 1`] = `
Object {
  "body": "It seems like your configuration uses a format unknown to me. 
That might be a consequence of invalid yaml cofiguration file. 

Here's what I am having problems with:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
}
`;

exports[`bot: FREE push event with insufficient premissions 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * unchanged",
}
`;

exports[`bot: PAID installation event insufficient permissions 1`] = `
Object {
  "body": "# Insufficient permissions

Hi there,
Thank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.

Please update your installation. 

_Missing repositories:_
 * unchanged

Best,
LabelSync Team",
  "title": "LabelSync - Insufficient permissions",
}
`;

exports[`bot: PAID installation event sync 1`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: PAID installation event sync 2`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: PAID installation invalid config issue 1`] = `
Object {
  "body": "# Welcome to LabelSync!

Hi there,
Thank you for using LabelSync. We hope you enjoyed the experience so far.
It seems like there are some problems with your configuration.
Our parser reported that:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }

Let us know if we can help you with the configuration by sending us an email to support@label-sync.com. We'll try to get back to you as quickly as possible.

Best,
LabelSync Team",
  "title": "LabelSync - Onboarding configuration",
}
`;

exports[`bot: PAID issues.labeled adds siblings 1`] = `
Array [
  "label/regular",
]
`;

exports[`bot: PAID logs are reporting correctly 1`] = `
Array [
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "PAID",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "No existing repository for maticzav, start onboarding.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Bootstraping config repo for maticzav.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding complete for maticzav.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "PAID",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "event": "installation",
    "level": "info",
    "message": "Error in config, skipping sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Opened issue undefined.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "PAID",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Performing sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Onboarding maticzav.",
    "plan": "PAID",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
    "event": "installation",
    "level": "info",
    "message": "Insufficient permissions, skipping sync.",
  },
  Object {
    "event": "installation",
    "level": "info",
    "message": "Opened issue undefined.",
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Configuration loaded.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Performing label sync on maticzav.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Sync completed.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "error": "Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Error in config Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Commented on commit 0000000000000000000000000000000000000000.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Configuration loaded.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"unchanged\\"],\\"accessible\\":[\\"changed\\"]}",
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Insufficient permissions: unchanged",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "push",
      "name": "push",
    },
    "level": "info",
    "message": "Commented on commit 0000000000000000000000000000000000000000.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "PullRequest action: opened",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Configration loaded configuration on labels",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Simulating sync.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Commented on PullRequest (undefined)",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "PullRequest action: opened",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "files": "README.md",
    "level": "info",
    "message": "Configuration didn't change, skipping comment.",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "PullRequest action: opened",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "config": "{\\"repos\\":{\\"changed\\":{\\"config\\":{\\"removeUnconfiguredLabels\\":true},\\"labels\\":{\\"create/new\\":{\\"color\\":\\"000000\\"},\\"alias/new\\":{\\"color\\":\\"000000\\",\\"alias\\":[\\"alias/old:1\\",\\"alias/old:2\\"]},\\"update/color\\":{\\"color\\":\\"ffffff\\"}}},\\"unchanged\\":{\\"labels\\":{\\"label-a\\":{\\"color\\":\\"000000\\"}}}}}",
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Configration loaded configuration on labels",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Insufficient permissions",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "opened",
      "name": "pull_request",
    },
    "level": "info",
    "message": "Commented on PullRequest undefined",
    "repo": Object {
      "name": "maticzav-labelsync",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "New label create in changed: \\":bug: Bugfix\\".",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "Removing label \\":bug: Bugfix\\" from changed.",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "Removed label \\":bug: Bugfix\\" from changed.",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "New label create in changed: \\":bug: Bugfix\\".",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "Removing label \\":bug: Bugfix\\" from changed.",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "label.created",
    },
    "level": "info",
    "message": "Removed label \\":bug: Bugfix\\" from changed.",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 43337079,
    },
    "event": Object {
      "action": "labeled",
      "name": "issues.labeled",
    },
    "level": "info",
    "message": "Issue (1) has been labeled with \\"label/siblings\\".",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 43337079,
      "owner": "maticzav",
      "type": "Organization",
    },
  },
  Object {
    "context": Object {
      "user_id": 43337079,
    },
    "event": Object {
      "action": "labeled",
      "name": "issues.labeled",
    },
    "level": "info",
    "message": "Added siblings of label/siblings to issue 1: label/regular",
    "repo": Object {
      "name": "changed",
    },
    "user": Object {
      "id": 43337079,
      "owner": "maticzav",
      "type": "Organization",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "New repository newrepo in maticzav.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "Performing sync on newrepo.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "Repository synced newrepo.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "New repository newrepo in maticzav.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "Performing sync on newrepo.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
  Object {
    "context": Object {
      "user_id": 21031067,
    },
    "event": Object {
      "action": "created",
      "name": "repository",
    },
    "level": "info",
    "message": "Repository synced newrepo.",
    "repo": Object {
      "name": "newrepo",
    },
    "user": Object {
      "id": 21031067,
      "owner": "maticzav",
      "type": "User",
    },
  },
]
`;

exports[`bot: PAID pull_request 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: PAID pull_request with insufficient permissions 1`] = `
Object {
  "body": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * unchanged",
}
`;

exports[`bot: PAID push event 1`] = `
Object {
  "body": "## LabelSync Overview 

### \`changed\`

__New labels:__
 * create/new

__Changed labels:__
 * alias/old:1 => alias/new
 * update/color

__Aliased labels:__
 * alias/old:2 => alias/new

__Removed labels:__
 * alias/old:2
 * remove
---
### \`unchanged\`

__New labels:__
No new labels created.

__Changed labels:__
No changed labels.

__Aliased labels:__
No aliases.

__Unconfigured labels.__
You have no unconfigured labels - you could make this repository \`strict\`.",
}
`;

exports[`bot: PAID push event 2`] = `
Array [
  Object {
    "body": Object {
      "color": "000000",
      "name": "alias/new",
    },
    "uri": "/repos/maticzav/changed/labels/alias/old:1",
  },
  Object {
    "body": Object {
      "color": "ffffff",
      "name": "update/color",
    },
    "uri": "/repos/maticzav/changed/labels/update/color",
  },
]
`;

exports[`bot: PAID push event 3`] = `
Array [
  "/repos/maticzav/changed/labels/alias/old:2",
  "/repos/maticzav/changed/labels/remove",
]
`;

exports[`bot: PAID push event 4`] = `
Array [
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/1/labels",
  },
  Object {
    "body": Array [
      "alias/new",
    ],
    "uri": "/repos/maticzav/changed/issues/4/labels",
  },
]
`;

exports[`bot: PAID push event invalid configuration 1`] = `
Object {
  "body": "It seems like your configuration uses a format unknown to me. 
That might be a consequence of invalid yaml cofiguration file. 

Here's what I am having problems with:

Invalid value undefined supplied to : { repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) } }/repos: { [K in string]: (Partial<{ config: Partial<{ removeUnconfiguredLabels: boolean }> }> & { labels: { [K in string]: ({ color: string } & Partial<{ description: string, siblings: Array<string>, alias: Array<string> }>) } }) }",
}
`;

exports[`bot: PAID push event with insufficient premissions 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * unchanged",
}
`;
